Take out MediaPlayback UI assertion when any WebProcess is playing audible media https://bugs.webkit.org/show_bug.cgi?id=197798

Reviewed by Chris Dumez.

To keep the system from suspending the UIProcess (and all the other constellation of processes that
are necessary to play media), take a UIProcess assertion with the MediaPlayback reason whenever there
is a WebContent process that is playing audible media.

* Platform/spi/ios/AssertionServicesSPI.h:
* UIProcess/ProcessAssertion.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::updatePlayingMediaDidChange):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::setWebProcessIsPlayingAudibleMedia):
(WebKit::WebProcessPool::clearWebProcessIsPlayingAudibleMedia):
* UIProcess/WebProcessPool.h:
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::webPageMediaStateDidChange):
* UIProcess/WebProcessProxy.h:
* UIProcess/ios/ProcessAssertionIOS.mm:
(WebKit::toBKSProcessAssertionReason):
(WebKit::ProcessAssertion::ProcessAssertion):
* WebProcess/WebProcess.h:


Canonical link: https://commits.webkit.org/211981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245255 268f45cc-cd09-0410-ab3c-d52691b4dbfc