Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -1037,6 +1037,7 @@ void WebPageProxy::close()
 #endif
 
     stopAllURLSchemeTasks();
+    updatePlayingMediaDidChange(MediaProducer::IsNotPlaying);
 }
 
 bool WebPageProxy::tryClose()
@@ -7071,6 +7072,8 @@ void WebPageProxy::resetStateAfterProcessExited(ProcessTerminationReason termina
         m_pageLoadState.reset(transaction);
     }
 
+    updatePlayingMediaDidChange(MediaProducer::IsNotPlaying);
+
     // FIXME: <rdar://problem/38676604> In case of process swaps, the old process should gracefully suspend instead of terminating.
     m_process->processTerminated();
 }
@@ -8092,7 +8095,8 @@ void WebPageProxy::isPlayingMediaDidChange(MediaProducer::MediaStateFlags newSta
     ASSERT(focusManager);
     focusManager->updatePlaybackAttributesFromMediaState(this, sourceElementID, newState);
 #endif
-    updatePlayingMediaDidChange(newState);
+    if (!m_isClosed)
+        updatePlayingMediaDidChange(newState);
 }
 
 void WebPageProxy::updatePlayingMediaDidChange(MediaProducer::MediaStateFlags newState)
@@ -8130,6 +8134,8 @@ void WebPageProxy::updatePlayingMediaDidChange(MediaProducer::MediaStateFlags ne
 
     if ((oldState & MediaProducer::HasAudioOrVideo) != (m_mediaState & MediaProducer::HasAudioOrVideo))
         videoControlsManagerDidChange();
+
+    m_process->webPageMediaStateDidChange(*this);
 }
 
 void WebPageProxy::videoControlsManagerDidChange()
